Use Java 19 virtual threads in HttpClient.