@@ -14,9 +14,9 @@
     <name>archura-platform</name>
     <description>archura-platform</description>
     <properties>
-        <java.version>17</java.version>
-        <compiler.source>17</compiler.source>
-        <compiler.target>17</compiler.target>
+        <java.version>19</java.version>
+        <compiler.source>19</compiler.source>
+        <compiler.target>19</compiler.target>
     </properties>
     <dependencies>
         <dependency>
@@ -54,6 +54,7 @@
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <compilerArgs>
+                        <arg>--enable-preview</arg>
                         <arg>--add-exports</arg>
                         <arg>java.base/jdk.internal.reflect=ALL-UNNAMED</arg>
                     </compilerArgs>
